--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>Slides for MA336 Statistics<br/></title>
+<title>Slides for MA336 Statistics</title>
 <style type="text/css">
 body {
   font-family: sans-serif;
@@ -77,9 +77,9 @@ table, .body h2 { border-bottom: 1px solid #666; }
 <div class="include-before">
 </div>
 <div class="frontmatter">
-<div class="title"><h1>Slides for MA336 Statistics<br/></h1></div>
-<div class="author"><h2>Fei Ye <br/> Department of Mathematics and Computer Science<br/></h2></div>
-<div class="date"><h3><code>r format(Sys.time(), '%B %Y')</code></h3></div>
+<div class="title"><h1>Slides for MA336 Statistics</h1></div>
+<div class="author"><h2></h2></div>
+<div class="date"><h3>Fall 2023</h3></div>
 </div>
 <div class="body">
 <h2 id="list-of-slides">List of slides</h2>
