--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@ table, .body h2 { border-bottom: 1px solid #666; }
 <div class="body">
 <h2 id="list-of-slides">List of slides</h2>
 <ul>
-<li><a href="Topic-1-Statistical-Studies.html">Topic 1: Statistical Studies</a></li>
+<li>
+<p><a href="Topic-1-Statistical-Studies.html">Topic 1: Statistical Studies</a></p>
+</li>
+<li>
+<p><a href="Topic-2-Graphical-Descriptions.html">Topic 2: Summarizing Quantitative Data Graphically</a></p>
+</li>
 </ul>
 </div>
 <div class="include-after">
