--- a/Topic-2-Graphical-Descriptions.html
+++ b/Topic-2-Graphical-Descriptions.html
@@ -332,7 +332,7 @@ border-collapse: collapse;
 <div class="include-before">
 </div>
 <div class="frontmatter">
-<div class="title"><h1>Topic 2: Describing Data Graphical<br/><br/></h1></div>
+<div class="title"><h1>Topic 2: Describing Data Graphically<br/><br/></h1></div>
 <div class="author"><h2>Fei Ye<br/>Department of Mathematics and Computer Science<br/></h2></div>
 <div class="date"><h3>August 2023</h3></div>
 </div>
