--- a/Topic-1-Statistical-Studies.html
+++ b/Topic-1-Statistical-Studies.html
@@ -585,7 +585,7 @@ border-collapse: collapse;
 </li>
 <li>
 <p>To establish a cause-and-effect relationship, we want to get rid of confounding variable and make sure the explanatory variable is the only thing that impacts the response variable.</p>
-<p><strong>Confounding variable:</strong> An extra variable that may have impact on the response variable of interest.</p>
+<p><strong>Confounding variable:</strong> An extra variable that may have effect on the response variable of interest.</p>
 </li>
 </ul>
 <hr />
@@ -611,7 +611,7 @@ border-collapse: collapse;
 Determine whether the study supports the conclusion that taking aspirin lowers the risk of heart attacks.</p>
 <p><strong>Answer:</strong> The conclusion claims a cause-and-effect relationship. To answer the question, we need an experimental study. However, the study has no control on data which makes it inappropriate.</p>
 <hr />
-<h2 id="practice-cause-and-effect">Practice: cause-and-effect</h2>
+<h2 id="practice-cause-and-effect-or-correlation">Practice: cause-and-effect or correlation</h2>
 <p>Does higher education attainment lead to higher salary?</p>
 <ol>
 <li>Determine if the question is a cause-and-effect question?</li>
@@ -714,7 +714,7 @@ Example: random survey math students to estimate the average GPA or a college.</
 <h2 id="elements-of-experimental-design-1-of-2">Elements of experimental design (1 of 2)</h2>
 <ul>
 <li>
-<p><strong>Control</strong> reduces the effects of extraneous variables (i.e., variables other than the independent variable and the dependent variable). These extraneous variables are called lurking variables.</p>
+<p><strong>Control</strong> reduces the effects of variables other than the explanatory variables and the response variables, known as extraneous variables.</p>
 </li>
 <li>
 <p>Three control strategies are control groups, placebos, and blinding.</p>
@@ -836,48 +836,20 @@ Example: random survey math students to estimate the average GPA or a college.</
 </ul>
 </li>
 </ul>
-<hr />
-<h2 id="table-in-excel">Table in Excel</h2>
-<ul>
-<li>
-<p><strong>Insert a table</strong></p>
-<ul>
-<li>
-<p>Step 1: In the menu bar, select Insert.</p>
-</li>
-<li>
-<p>Step 2: Look for Table and click it.</p>
-</li>
-<li>
-<p>Step 3: In the popup windows, you may enter the two diagonal cell locators. For that, press Shift and select the two diagonal cells of you table.</p>
-</li>
-<li>
-<p>Step 4: Click OK. You will see the table.</p>
-</li>
-</ul>
-</li>
-<li>
-<p><strong>Remark:</strong> Tables are normally used for more than one variables, that are characteristic or attributes being studied, such as attendance rate and grade. In table, a column is usually used to put entries of a data set for a certain variable. Rows are used as labels of individual entries.</p>
-</li>
-</ul>
-<hr />
-<h2 id="insert-or-delete-cells">Insert or delete cells</h2>
-<ul>
-<li>
-<p><strong>Insert or delete cells, rows or columns</strong></p>
-<ul>
-<li>
-<p>Step 1: Highlight by left clicking the cell(s), row, or column that you want to insert or delete.</p>
-</li>
-<li>
-<p>Step 2: Right-click the highlighted cell, row or column</p>
-</li>
-<li>
-<p>Step 3: In the popup window, select insert or delete and follow the instruction.</p>
-</li>
-</ul>
-</li>
-</ul>
+<!-- --- -->
+<!-- ## Table in Excel -->
+<!-- - **Insert a table** -->
+<!--   - Step 1: In the menu bar, select Insert. -->
+<!--   - Step 2: Look for Table and click it. -->
+<!--   - Step 3: In the popup windows, you may enter the two diagonal cell locators. For that, press Shift and select the two diagonal cells of you table. -->
+<!--   - Step 4: Click OK. You will see the table. -->
+<!-- - **Remark:** Tables are normally used for more than one variables, that are characteristic or attributes being studied, such as attendance rate and grade. In table, a column is usually used to put entries of a data set for a certain variable. Rows are used as labels of individual entries. -->
+<!-- --- -->
+<!-- ## Insert or delete cells -->
+<!-- - **Insert or delete cells, rows or columns** -->
+<!--   - Step 1: Highlight by left clicking the cell(s), row, or column that you want to insert or delete. -->
+<!--   - Step 2: Right-click the highlighted cell, row or column -->
+<!--   - Step 3: In the popup window, select insert or delete and follow the instruction. -->
 <hr />
 <h2 id="install-the-analysis-toolpak">Install the Analysis ToolPak</h2>
 <ul>
