--- a/Topic-1-Statistical-Studies.html
+++ b/Topic-1-Statistical-Studies.html
@@ -786,10 +786,22 @@ Example: random survey math students to estimate the average GPA or a college.</
 </a></p>
 </div>
 <hr />
-<h2 id="random-numbers-by-excel-1-of-3">Random numbers by Excel (1 of 3)</h2>
+<h2 id="generating-random-numbers-in-excel">Generating Random Numbers in Excel</h2>
 <ul>
-<li>
-<p><strong>Example:</strong> Randomly generate a number between 0 and 1.</p>
+<li><code>=RAND()</code> returns a random real number greater than or equal to 0 and less than 1.  To generate a random real number between \(a\) and \(b\), one can use <code>=RAND()*(b-a)+a</code>.</li>
+<li><code>=RANDBETWEEN(bottom, top)</code> returns an integer between <code>bottom</code> and <code>top</code>.</li>
+<li><code>=RANDARRAY([rows],[columns],[min],[max],[whole_number])</code> returns an array of random numbers. You can specify the number of rows and columns to fill, minimum and maximum values, and whether to return whole numbers or decimal values (TRUE for whole number and FALSE for decimal values).</li>
+</ul>
+<div class="remark">
+<ul>
+<li>All arguments of <code>RANDARRAY</code> are optional. <code>RANDARRAY()</code> is equivalent to <code>RAND()</code>.</li>
+<li>To get an array of random values without duplication, one can use <code>=UNIQUE(RANDARRAY([rows],[columns],[min],[max],[whole_number]))</code>.</li>
+</ul>
+</div>
+<hr />
+<h2 id="example-usage-of-rand">Example: Usage of <code>RAND()</code></h2>
+<p>Randomly generate a number between 0 and 1.</p>
+<p><strong>Howto:</strong></p>
 <ul>
 <li>
 <p>Step 1: Choose a cell, say <code>A1</code></p>
@@ -805,57 +817,43 @@ Example: random survey math students to estimate the average GPA or a college.</
 </li>
 </ul>
 <p>Alternatively, you may also manually enter the function: <code>=rand()</code> in the cell and hit enter.</p>
-</li>
-</ul>
 <hr />
-<h2 id="random-numbers-by-excel-2-of-3">Random numbers by Excel (2 of 3)</h2>
+<h2 id="example-usage-of-randbetween">Example: Usage of <code>RANDBETWEEN()</code></h2>
+<p>Generate 10 random integers of 2 digits.</p>
+<p><strong>Howto:</strong></p>
 <ul>
 <li>
-<p><strong>Example:</strong> Generate 10 random integers of 2 digits.</p>
-<ul>
-<li>
-<p>Step 1: Generate a random integer, say in the cell <code>A1</code>, using the Excel function <code>randbetween(bottom,top)</code>.</p>
+<p>Step 1: Generate a random integer, say in the cell <code>A1</code>, using the Excel function <code>=RANDBETWEEN(10,99)</code>.</p>
 </li>
 <li>
 <p>Step 2: Move the mouse cursor to the lower right corner of the cell <code>A1</code>. A solid plus <code>+</code> will appear.</p>
 </li>
 <li>
-<p>Step 3: Hold the left-click of the mouse and drag the cell to horizontally or vertically to get 10 numbers.</p>
+<p>Step 3: Hold the left-click of the mouse and drag the cell to horizontally or vertically to autofill the selected array with 10 random numbers of 2 digits.</p>
 </li>
 </ul>
-</li>
-</ul>
-<p>Using <code>randbetween</code>, you will find that some numbers were repeated. If you are using the latest version of Excel, you may use <code>randarray</code> to generate numbers without repetition.</p>
 <hr />
-<h2 id="random-numbers-by-excel-3-of-3">Random numbers by Excel (3 of 3)</h2>
-<ul>
-<li>
-<p><strong>Example:</strong> Generate 10 random integers of 2 digits without repetition.</p>
-<ul>
-<li>In the cell with 10 empty cells below it, say <code>A1</code>, apply the Excel function <code>=randarray(rows,columns,min,max,integer)</code>. In this case, you should set rows=10, columns=1, min=10, max=99, and choose integer to be TRUE.</li>
-</ul>
-</li>
-</ul>
-<!-- --- -->
-<!-- ## Table in Excel -->
-<!-- - **Insert a table** -->
-<!--   - Step 1: In the menu bar, select Insert. -->
-<!--   - Step 2: Look for Table and click it. -->
-<!--   - Step 3: In the popup windows, you may enter the two diagonal cell locators. For that, press Shift and select the two diagonal cells of you table. -->
-<!--   - Step 4: Click OK. You will see the table. -->
-<!-- - **Remark:** Tables are normally used for more than one variables, that are characteristic or attributes being studied, such as attendance rate and grade. In table, a column is usually used to put entries of a data set for a certain variable. Rows are used as labels of individual entries. -->
-<!-- --- -->
-<!-- ## Insert or delete cells -->
-<!-- - **Insert or delete cells, rows or columns** -->
-<!--   - Step 1: Highlight by left clicking the cell(s), row, or column that you want to insert or delete. -->
-<!--   - Step 2: Right-click the highlighted cell, row or column -->
-<!--   - Step 3: In the popup window, select insert or delete and follow the instruction. -->
+<h2 id="example-usage-of-randarray">Example: Usage of <code>RANDARRAY()</code></h2>
+<p>Generate 10 random integers of 2 digits without repetition.</p>
+<p><strong>Howto:</strong></p>
+<p>In the cell with 9 empty cells below it, say <code>A1</code>, apply the Excel function <code>=UNIQUE(RANDARRAY(10, 1, 10, 99, TRUE))</code>. You will get a column array of 10 integers without duplication.</p>
 <hr />
-<h2 id="install-the-analysis-toolpak">Install the Analysis ToolPak</h2>
-<ul>
+<h2 id="practice-random-numbers" class="unnumbered">Practice: Random Numbers</h2>
+<ol>
 <li>
-<p>We will use analysis toolpak frequently for analyzing data.</p>
+<p>Generate a real number between 1 and 2.</p>
 </li>
+<li>
+<p>Generate 10 integers of 2 digits that are less than 50.</p>
+</li>
+<li>
+<p>Generate 10 integers of 2 digits that are less than 50 and without duplication.</p>
+</li>
+</ol>
+<hr />
+<h2 id="install-the-analysis-toolpak-optional">Install the Analysis ToolPak (Optional)</h2>
+<p>If you have a desktop version Excel, you may install the Excel add-in, Analysis Toolpak which is frequently used for analyzing data.</p>
+<ul>
 <li>
 <p>To install the add-in <code>The Analysis ToolPak</code>:</p>
 <ul>
