fixing heights of embedded

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@ table, .body h2 { border-bottom: 1px solid #666; }
 <li>
 <p><a href="Topic-2-Graphical-Descriptions.html">Topic 2: Summarizing Data Graphically</a></p>
 </li>
+<li>
+<p><a href="Topic-3-Numercial-Descriptions.html">Topic 3: Summarizing Data Numerically</a></p>
+</li>
 </ul>
 </div>
 <div class="include-after">
