--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@ table, .body h2 { border-bottom: 1px solid #666; }
 <li>
 <p><a href="Topic-3-Numercial-Descriptions.html">Topic 3: Summarizing Data Numerically</a></p>
 </li>
+<li>
+<p><a href="Topic-4-Linear-Relationship.html">Topic 4: Linear Relationship</a></p>
+</li>
 </ul>
 </div>
 <div class="include-after">
